--- a/src/components/Product/styles.scss
+++ b/src/components/Product/styles.scss
@@ -1,4 +1,11 @@
 .product-item {
+    &:first-child {
+        & .product-item {
+            &__image-block {
+                margin-left: 0;
+            }
+        }
+    }
     &__image-block {
         width: 183px;
         height: 193px;
@@ -8,6 +15,7 @@
         border-radius: 10px;
         background-color: #F4F2EE;
         padding: 16px;
+        margin: 0 19px;
     }
     &__price {
         width: 100%;
@@ -15,7 +23,7 @@
         grid-template-columns: repeat(2, 1fr);
     }
     &__title {
-        padding: 14px 45px 25px 10px;
+        padding: 14px 45px 25px 19px;
     }
     &__rating {
         display: flex;
@@ -34,7 +42,7 @@
             display: flex;
             align-items: center;
             padding: 0;
-            padding-left: 10px;
+            padding-left: 19px;
         }
     }
     &__link span {
