--- a/src/App.scss
+++ b/src/App.scss
@@ -30,10 +30,10 @@ body {
     &__sidebar {
         align-self: flex-end;
         width: 100%;
-        max-width: 215px;
+        max-width: 234px;
         & .info-panel {
             width: 100%;
-            margin-bottom: 17px;
+            margin-bottom: 82px;
             &__item {
                 padding-left: 11px;
                 & span {
@@ -46,6 +46,7 @@ body {
         display: flex;
         justify-content: space-between;
         overflow-x: scroll;
+        width: 960px;
         height: 100%;
     }
 }
