--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,8 @@
     height: auto;
 }
 
-html, body {
+html,
+body {
     font-family: 'Montserrat', sans-serif;
     height: 100%;
 }
@@ -27,21 +28,25 @@ body {
     align-items: center;
     height: 100%;
     width: 100vw;
+
     &__sidebar {
         align-self: flex-end;
         width: 100%;
         max-width: 234px;
+
         & .info-panel {
             width: 100%;
             margin-bottom: 82px;
             &__item {
                 padding-left: 11px;
+
                 & span {
                     vertical-align: sub;
                 }
             }
         }
     }
+
     &__product-list {
         display: flex;
         justify-content: space-between;
